infra/k8s-dev/gcp-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          # - path: /api/ai-scores/request/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: request-srv
          #       port:
          #         number: 3000
          # - path: /api/users/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: user-srv
          #       port:
          #         number: 3000
          # - path: /api/quotas/?(.*)
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: user-srv
          #       port:
          #         number: 3000
